<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/nav_AboutUs"
        android:icon="@drawable/question"
        android:title="AboutUs"/>


    <item
        android:id="@+id/nav_Help"
        android:icon="@drawable/help"
        android:title="@string/Help" />

    <item
        android:id="@+id/nav_RateThisApp"
        android:icon="@drawable/rate"
        android:title="@string/RateThisApp" />
    <item
        android:id="@+id/nav_ShareThisApp"
        android:icon="@drawable/share"
        android:title="@string/ShareThisApp" />

    <item
        android:id="@+id/nav_Signin"
        android:icon="@drawable/login"
        android:title="@string/Signin" />

    <item
        android:id="@+id/nav_Signout"
        android:icon="@drawable/logout"
        android:title="@string/Signout" />
</menu>